<resources>
    <string name="app_name">To-Do-Listv3-Retrofit-Rest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FAADDButton">ADD</string>
    <string name="name">Name</string>
    <string name="buttonSave">Save</string>
    <string name="description">Description</string>
    <string name="owner">Owner</string>
    <string name="date">Date</string>
    <string name="in_progress">In Progress</string>
    <string name="delete">DELETE</string>
</resources>